test/src/e2e_vm_tests/test_programs/should_pass/language/typeinfo_custom_callpath/src/foo.sw
library foo;

pub enum Foo {
  A: (),
  B: (),
}