test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/error_type_attr.sw
library;

#[error_type]
enum Ok1 {
    #[error(m = "ok")]
    A: (),
}

#[error_type()]
enum Ok2 {
    #[error(m = "ok")]
    A: (),
}

#[error_type(invalid)]
enum NotOk {
    #[error(m = "ok")]
    A: (),
}